--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="parallax" id="bg0" >
 	<div>
 	    <h1>J a s o n &nbsp; S l o c u m</h1>
-	    <h2 id='tag'>Modern&nbsp;<br />Front End&nbsp;<br />Development,<br />Design,<br />UI/UX&nbsp;</h2>
+	    <h2 id='tag'>Modern&nbsp;<br />Front End&nbsp;<br />Development,<br />Design</h2>
 	</div>
     </div>
     
