modal hover effect

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     <div class="parallax container" id="bg1">
 
 	<div class='row'>
-            <a data-toggle="modal" data-target=".modal1"><img alt='recent photo shoot' class='img-responsive col-md-4' src='images/img2.png'></a>
-            <a data-toggle="modal" data-target=".modal2"><img alt='recent photo shoot' class='img-responsive col-md-4' src='images/TLP.png'></a>
-            <a data-toggle="modal" data-target=".modal3"><img alt='recent photo shoot' class='img-responsive col-md-4' src='images/img9.png'></a>
+            <a data-toggle="modal" data-target=".modal1"><img alt='recent photo shoot' class='img-responsive col-md-4 mdl' src='images/img2.png'></a>
+            <a data-toggle="modal" data-target=".modal2"><img alt='recent photo shoot' class='img-responsive col-md-4 mdl' src='images/TLP.png'></a>
+            <a data-toggle="modal" data-target=".modal3"><img alt='recent photo shoot' class='img-responsive col-md-4 mdl' src='images/img9.png'></a>
         </div>
         <div class='row'>
-            <a data-toggle="modal" data-target=".modal4"><img alt='recent photo shoot' class='img-responsive col-md-4' src='images/img5.png'></a>
-            <a data-toggle="modal" data-target=".modal5"><img alt='recent photo shoot' class='img-responsive col-md-4' src='images/img8.png'></a>
-            <a data-toggle="modal" data-target=".modal6"><img alt='recent photo shoot' class='img-responsive col-md-4' src='images/img7.png'></a>
+            <a data-toggle="modal" data-target=".modal4"><img alt='recent photo shoot' class='img-responsive col-md-4 mdl' src='images/img5.png'></a>
+            <a data-toggle="modal" data-target=".modal5"><img alt='recent photo shoot' class='img-responsive col-md-4 mdl' src='images/img8.png'></a>
+            <a data-toggle="modal" data-target=".modal6"><img alt='recent photo shoot' class='img-responsive col-md-4 mdl' src='images/img7.png'></a>
         </div>
 	
     </div>
